--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -36,9 +36,11 @@ theme:
 
 plugins:
   - search
+  - plotly
 
 nav:
   - Home: index.md
+  - Benchmarks: benchmarks.md
 
 markdown_extensions:
   - pymdownx.highlight:
@@ -52,6 +54,9 @@ markdown_extensions:
         - name: mermaid
           class: mermaid
           format: !!python/name:pymdownx.superfences.fence_code_format
+        - name: plotly
+          class: mkdocs-plotly
+          format: !!python/name:mkdocs_plotly_plugin.fences.fence_plotly
   - pymdownx.tabbed:
       alternate_style: true
   - admonition
