--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,17 @@ version = "0.0.0"
 requires-python = ">=3.12"
 
 [dependency-groups]
+benchmark = [
+    "numpy>=2.4.2",
+    "plotly>=6.5.2",
+    "sqliteai-vector>=0.9.70",
+]
+benchmark-models = [
+    "datasets>=4.5.0",
+    "sentence-transformers>=5.2.2",
+]
 docs = [
     "mkdocs>=1.6.0",
     "mkdocs-material>=9.5.0",
+    "mkdocs-plotly-plugin>=0.1.3",
 ]
