--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,11 +8,14 @@ requires-python = ">=3.12"
 benchmark = [
     "numpy>=2.4.2",
     "plotly>=6.5.2",
+    "jinja2>=3.1.0",
     "sqliteai-vector>=0.9.70",
-]
-benchmark-models = [
     "datasets>=4.5.0",
     "sentence-transformers>=5.2.2",
+    "vectorlite-py",
+    "apsw",
+    "sqlite-vec",
+    "graphqlite",
 ]
 docs = [
     "mkdocs>=1.6.0",
