--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -40,6 +40,7 @@ plugins:
 
 nav:
   - Home: index.md
+  - API Reference: api.md
   - Benchmarks: benchmarks.md
   - Benchmarks (VSS): benchmarks/vss.md
   - Benchmarks (Graph): benchmarks/graph.md
