--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["setuptools>=64"]
+requires = ["setuptools>=75"]
 build-backend = "setuptools.build_meta"
 
 [project]
@@ -13,7 +13,6 @@ keywords = ["sqlite", "vector", "hnsw", "graph", "node2vec", "search"]
 classifiers = [
     "Development Status :: 3 - Alpha",
     "Intended Audience :: Developers",
-    "License :: OSI Approved :: MIT License",
     "Programming Language :: C",
     "Programming Language :: Python :: 3",
     "Topic :: Database",
@@ -31,7 +30,7 @@ version = {file = "VERSION"}
 include = ["sqlite_muninn*"]
 
 [tool.setuptools.package-data]
-sqlite_muninn = ["*.so", "*.dylib", "*.dll", "skills/**/*.md"]
+sqlite_muninn = ["*.so", "*.dylib", "*.dll"]
 
 # Development dependency groups (not package dependencies)
 [dependency-groups]
@@ -53,5 +52,12 @@ docs = [
     "mkdocs-plotly-plugin>=0.1.3",
 ]
 dev = [
+    "gcovr>=8.6",
+    "mypy>=1.19.1",
     "pytest>=8.0",
+    "pytest-cov>=7.0.0",
+    "ruff>=0.15.0",
 ]
+
+[tool.pytest.ini_options]
+testpaths = ["pytests"]
