--- a/npm/platforms/linux-x64/package.json
+++ b/npm/platforms/linux-x64/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@sqlite-muninn/linux-x64",
-  "version": "0.1.0-alpha.3",
+  "version": "0.1.0-alpha.5",
   "description": "sqlite-muninn native binary for Linux x64",
   "repository": {
     "type": "git",
-    "url": "https://github.com/neozenith/sqlite-muninn.git"
+    "url": "git+https://github.com/neozenith/sqlite-muninn.git"
   },
   "license": "MIT",
   "os": ["linux"],
