fix: refactor npm deployment to generate platform specific package.json and refined the wasm/ and viz/ demo servers

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -253,5 +253,5 @@ jobs:
         with:
           name: wasm
           path: |
-            dist/muninn_sqlite3.js
-            dist/muninn_sqlite3.wasm
+            dist/nodejs/platforms/wasm/muninn_sqlite3.js
+            dist/nodejs/platforms/wasm/muninn_sqlite3.wasm
