--- a/viz/pyproject.toml
+++ b/viz/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "numba>=0.60",
     "numpy>=2.0",
     "pydantic>=2.0",
+    "sentence-transformers>=3.0",
 ]
 
 [dependency-groups]
